adding sections for my schedule

--- a/index.html
+++ b/index.html
@@ -31,7 +31,36 @@
     <div class="container">
       <!-- Timeblocks go here -->
       
-
+          <table class="col-12 table table-bordered table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">Time Block (Hours)</th>
+                    <th class="activity" scope="col">Activity/Schedule Item</th>
+                    <th scope="col">Save</th>
+                </tr>
+            </thead>
+            <tr>
+              <th scope="col">9AM</th>
+              <th class="activity" scope="col">breakfast</th>
+              <th scope="col">Save</th>
+            </tr>
+            <tr>
+              <th scope="col">10AM</th>
+              <th class="activity" scope="col"></th>
+              <th scope="col">Save</th>
+          </tr>
+          <tr>
+            <th scope="col">Time Block (Hours)</th>
+            <th class="activity" scope="col">Activity/Schedule Item</th>
+            <th scope="col">Save</th>
+        </tr>
+        <tr>
+          <th scope="col">Time Block (Hours)</th>
+          <th class="activity" scope="col">Activity/Schedule Item</th>
+          <th scope="col">Save</th>
+      </tr>
+          </table>
+         
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
