--- a/index.html
+++ b/index.html
@@ -42,23 +42,48 @@
             <tr>
               <th scope="col">9AM</th>
               <th class="activity" scope="col">breakfast</th>
-              <th scope="col">Save</th>
+              <th scope="col"><button></button>Save</button></th>
             </tr>
             <tr>
               <th scope="col">10AM</th>
               <th class="activity" scope="col"></th>
-              <th scope="col">Save</th>
-          </tr>
-          <tr>
-            <th scope="col">Time Block (Hours)</th>
-            <th class="activity" scope="col">Activity/Schedule Item</th>
-            <th scope="col">Save</th>
-        </tr>
-        <tr>
-          <th scope="col">Time Block (Hours)</th>
-          <th class="activity" scope="col">Activity/Schedule Item</th>
-          <th scope="col">Save</th>
-      </tr>
+              <th scope="col"><button></button>Save</button></th>
+            </tr>
+            <tr>
+              <th scope="col">11AM</th>
+              <th class="activity" scope="col"></th>
+              <th scope="col"><button></button>Save</button></th>
+            </tr>
+            <tr>
+              <th scope="col">12PM</th>
+              <th class="activity" scope="col"></th>
+              <th scope="col"><button></button>Save</button></th>
+            </tr>
+            <tr>
+              <th scope="col">1PM</th>
+              <th class="activity" scope="col"></th>
+              <th scope="col"><button></button>Save</button></th>
+            </tr>
+            <tr>
+              <th scope="col">2PM</th>
+              <th class="activity" scope="col"></th>
+              <th scope="col"><button></button>Save</button></th>
+            </tr>
+            <tr>
+              <th scope="col">3PM</th>
+              <th class="activity" scope="col"></th>
+              <th scope="col"><button></button>Save</button></th>
+            </tr>
+            <tr>
+              <th scope="col">4PM</th>
+              <th class="activity" scope="col"></th>
+              <th scope="col"><button></button>Save</button></th>
+            </tr>
+            <tr>
+              <th scope="col">5PM</th>
+              <th class="activity" scope="col"></th>
+              <th scope="col"><button></button>Save</button></th>
+            </tr>
           </table>
          
     </div>
