editing final bugs in html

--- a/index.html
+++ b/index.html
@@ -30,62 +30,51 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      
-          <table class="col-12 table table-bordered table-hover">
-            <thead>
-                <tr>
-                    <th scope="col">Time Block (Hours)</th>
-                    <th class="activity" scope="col">Activity/Schedule Item</th>
-                    <th scope="col">Save</th>
-                </tr>
-            </thead>
-            <tr>
-              <th scope="col">9AM</th>
-              <th class="activity" scope="col">breakfast</th>
-              <th scope="col"><button class="savebtn">Save</button></th>
-            </tr>
-            <tr>
-              <th scope="col">10AM</th>
-              <th class="activity" scope="col"></th>
-              <th scope="col"><button class="savebtn">Save</button></th>
-            </tr>
-            <tr>
-              <th scope="col">11AM</th>
-              <th class="activity" scope="col"></th>
-              <th scope="col"><button class="savebtn">Save</button></th>
-            </tr>
-            <tr>
-              <th scope="col">12PM</th>
-              <th class="activity" scope="col"></th>
-              <th scope="col"><button class="savebtn">Save</button></th>
-            </tr>
-            <tr>
-              <th scope="col">1PM</th>
-              <th class="activity" scope="col"></th>
-              <th scope="col"><button class="savebtn">Save</button></th>
-            </tr>
-            <tr>
-              <th scope="col">2PM</th>
-              <th class="activity" scope="col"></th>
-              <th scope="col"><button class="savebtn">Save</button></th>
-            </tr>
-            <tr>
-              <th scope="col">3PM</th>
-              <th class="activity" scope="col"></th>
-              <th scope="col"><button class="savebtn">Save</button></th>
-            </tr>
-            <tr>
-              <th scope="col">4PM</th>
-              <th class="activity" scope="col"></th>
-              <th scope="col"><button class="savebtn">Save</button></th>
-            </tr>
-            <tr>
-              <th scope="col">5PM</th>
-              <th class="activity" scope="col"></th>
-              <th scope="col"><button class="savebtn">Save</button></th>
-            </tr>
-          </table>
-         
+        <section class="row">
+          <div class="col-md-1 col-sm-2 hour pt-4">9AM</div>
+          <div class="col-lg-10 col-sm-2 pt-4"></div>
+          <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+        </section>
+        <section class="row">
+          <div class="col-md-1 col-sm-2 hour pt-4">10AM</div>
+          <div class="col-lg-10 col-sm-2 pt-4"></div>
+          <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+        </section>
+        <section class="row">
+          <div class="col-md-1 col-sm-2 hour pt-4">11AM</div>
+          <div class="col-lg-10 col-sm-2 pt-4"></div>
+          <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+        </section>
+        <section class="row">
+          <div class="col-md-1 col-sm-2 hour pt-4">12PM</div>
+          <div class="col-lg-10 col-sm-2 pt-4"></div>
+         <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+        </section>
+        <section class="row">
+          <div class="col-md-1 col-sm-2 hour pt-4">1PM</div>
+          <div class="col-lg-10 col-sm-2 pt-4"></div>
+          <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+        </section>
+        <section class="row">
+          <div class="col-md-1 col-sm-2 hour pt-4">2PM</div>
+          <div class="col-lg-10 col-sm-2 pt-4"></div>
+          <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+        </section>
+        <section class="row">
+          <div class="col-md-1 col-sm-2 hour pt-4">3PM</div>
+          <div class="col-lg-10 description"></div>
+          <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+        </section>
+        <section class="row">
+          <div class="col-md-1 col-sm-2 hour pt-4">4PM</div>
+          <div class="col-lg-10 col-sm-2 pt-4"></div>
+          <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+        </section>
+        <section class="row">
+          <div class="col-md-1 col-sm-2 hour pt-4">5PM</div>
+          <div class="col-lg-10 col-sm-2 pt-4"></div>
+          <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+        </section>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
