added final css touches to html

--- a/index.html
+++ b/index.html
@@ -32,51 +32,52 @@
       <!-- Timeblocks go here -->
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">9AM</div>
-          <div class="col-lg-10 col-sm-2 pt-4"></div>
-          <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">10AM</div>
-          <div class="col-lg-10 col-sm-2 pt-4"></div>
-          <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">11AM</div>
-          <div class="col-lg-10 col-sm-2 pt-4"></div>
-          <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">12PM</div>
-          <div class="col-lg-10 col-sm-2 pt-4"></div>
-         <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+          <input class="time-block col-lg-10 col-sm-2 pt-4">
+         <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">1PM</div>
-          <div class="col-lg-10 col-sm-2 pt-4"></div>
-          <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">2PM</div>
-          <div class="col-lg-10 col-sm-2 pt-4"></div>
-          <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">3PM</div>
-          <div class="col-lg-10 description"></div>
-          <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">4PM</div>
-          <div class="col-lg-10 col-sm-2 pt-4"></div>
-          <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">5PM</div>
-          <div class="col-lg-10 col-sm-2 pt-4"></div>
-          <button class="col-md-1 col-sm-2 saveBtn">Save</button>
+          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
     </div>
-
+    <br>
+    <footer class="text-center">Made with <i class="fas fa-coffee"></i></footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="assets/js/script.js"></script>
