--- a/index.html
+++ b/index.html
@@ -32,47 +32,47 @@
       <!-- Timeblocks go here -->
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">9AM</div>
-          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="timeblock" class="time-block col-lg-10 col-sm-2 pt-4">
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">10AM</div>
-          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="timeblock" class="time-block col-lg-10 col-sm-2 pt-4">
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">11AM</div>
-          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="timeblock" class="time-block col-lg-10 col-sm-2 pt-4">
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">12PM</div>
-          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="timeblock" class="time-block col-lg-10 col-sm-2 pt-4">
          <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">1PM</div>
-          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="timeblock" class="time-block col-lg-10 col-sm-2 pt-4">
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">2PM</div>
-          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="timeblock" class="time-block col-lg-10 col-sm-2 pt-4">
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">3PM</div>
-          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="timeblock" class="time-block col-lg-10 col-sm-2 pt-4">
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">4PM</div>
-          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="timeblock" class="time-block col-lg-10 col-sm-2 pt-4">
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">5PM</div>
-          <input class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="timeblock" class="time-block col-lg-10 col-sm-2 pt-4">
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
     </div>
@@ -81,5 +81,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="assets/js/script.js"></script>
+  
   </body>
 </html>
