fixing jquery and block colors

--- a/index.html
+++ b/index.html
@@ -32,47 +32,47 @@
       <!-- Timeblocks go here -->
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">9AM</div>
-          <input type="text" id="timeblock9" class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="appt" class="time-block col-lg-10 col-sm-2 pt-4">
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">10AM</div>
-          <input type="text" id="timeblock10" class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="appt" class="time-block col-lg-10 col-sm-2 pt-4">
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">11AM</div>
-          <input type="text" id="timeblock11" class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="appt" class="time-block col-lg-10 col-sm-2 pt-4">
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">12PM</div>
-          <input type="text" id="timeblock12" class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="appt" class="time-block col-lg-10 col-sm-2 pt-4">
          <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">1PM</div>
-          <input type="text" id="timeblock1" class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="appt" class="time-block col-lg-10 col-sm-2 pt-4">
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">2PM</div>
-          <input type="text" id="timeblock1" class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="appt" class="time-block col-lg-10 col-sm-2 pt-4">
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">3PM</div>
-          <input type="text" id="timeblock3" class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="appt" class="time-block col-lg-10 col-sm-2 pt-4">
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">4PM</div>
-          <input type="text" id="timeblock4" class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="appt" class="time-block col-lg-10 col-sm-2 pt-4">
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
         <section class="row">
           <div class="col-md-1 col-sm-2 hour pt-4">5PM</div>
-          <input type="text" id="timeblock5" class="time-block col-lg-10 col-sm-2 pt-4">
+          <input type="text" id="appt" class="time-block col-lg-10 col-sm-2 pt-4">
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
     </div>
