making more progress with jquery

--- a/index.html
+++ b/index.html
@@ -30,47 +30,47 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-        <section class="row">
+        <section class="time-block row">
           <div class="col-md-1 col-sm-2 hour pt-4">9AM</div>
           <textarea id="appt" class="description col-lg-10 col-sm-2 pt-4"></textarea>
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
-        <section class="row">
+        <section class="time-block row">
           <div class="col-md-1 col-sm-2 hour pt-4">10AM</div>
           <textarea id="appt" class="description col-lg-10 col-sm-2 pt-4"></textarea>
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
-        <section class="row">
+        <section class="time-block row">
           <div class="col-md-1 col-sm-2 hour pt-4">11AM</div>
           <textarea id="appt" class="description col-lg-10 col-sm-2 pt-4"></textarea>
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
-        <section class="row">
+        <section class="time-block row">
           <div class="col-md-1 col-sm-2 hour pt-4">12PM</div>
           <textarea id="appt" class="description col-lg-10 col-sm-2 pt-4"></textarea>
          <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
-        <section class="row">
+        <section class="time-block row">
           <div class="col-md-1 col-sm-2 hour pt-4">1PM</div>
           <textarea id="appt" class="description col-lg-10 col-sm-2 pt-4"></textarea>
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
-        <section class="row">
+        <section class="time-block row">
           <div class="col-md-1 col-sm-2 hour pt-4">2PM</div>
           <textarea id="appt" class="description col-lg-10 col-sm-2 pt-4"></textarea>
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
-        <section class="row">
+        <section class="time-block row">
           <div class="col-md-1 col-sm-2 hour pt-4">3PM</div>
           <textarea id="appt" class="description col-lg-10 col-sm-2 pt-4"></textarea>
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
-        <section class="row">
+        <section class="time-block row">
           <div class="col-md-1 col-sm-2 hour pt-4">4PM</div>
           <textarea id="appt" class="description col-lg-10 col-sm-2 pt-4"></textarea>
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
-        <section class="row">
+        <section class="time-block row">
           <div class="col-md-1 col-sm-2 hour pt-4">5PM</div>
           <textarea id="appt" class="description col-lg-10 col-sm-2 pt-4"></textarea>
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
