--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-        <section class="time-block row">
-          <div class="col-md-1 col-sm-2 hour pt-4">9AM</div>
+        <section class="time-block row" id="9AM">
+          <div class="col-md-1 col-sm-2 hour pt-4" value="9">9AM</div>
           <textarea id="appt" class="description col-lg-10 col-sm-2 pt-4"></textarea>
           <button class="col-md-1 col-sm-2 saveBtn"><i class="far fa-save"></i></button>
         </section>
