--- a/index.html
+++ b/index.html
@@ -30,47 +30,47 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here --> 
-        <section class="time-block row" id="9AM" >
+        <section class="time-block row" id="9" >
           <div class="col-md-1 hour">9AM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
         </section>
-        <section class="time-block row" id="10AM">
+        <section class="time-block row" id="10">
           <div class="col-md-1 hour">10AM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
         </section>
-        <section class="time-block row" id="11AM">
+        <section class="time-block row" id="11">
           <div class="col-md-1 hour">11AM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
         </section>
-        <section class="time-block row" id="12PM">
+        <section class="time-block row" id="12">
           <div class="col-md-1 hour">12PM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
         </section>
-        <section class="time-block row" id="1PM">
+        <section class="time-block row" id="1">
           <div class="col-md-1 hour">1PM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
         </section>
-        <section class="time-block row" id="2PM">
+        <section class="time-block row" id="2">
           <div class="col-md-1 hour">2PM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
         </section>
-        <section class="time-block row" id="3PM">
+        <section class="time-block row" id="3">
           <div class="col-md-1 hour">3PM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
         </section>
-        <section class="time-block row" id="4PM">
+        <section class="time-block row" id="4">
           <div class="col-md-1 hour">4PM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
         </section>
-        <section class="time-block row" id="5PM">
+        <section class="time-block row" id="5">
           <div class="col-md-1 hour">5PM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
@@ -80,7 +80,7 @@
     <footer class="text-center">Made with <i class="fas fa-coffee"></i></footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   
   </body>
 </html>
