--- a/index.html
+++ b/index.html
@@ -30,47 +30,47 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here --> 
-        <section class="time-block row" id="9" >
+        <section class="time-block row" id="9AM">
           <div class="col-md-1 hour">9AM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
         </section>
-        <section class="time-block row" id="10">
+        <section class="time-block row" id="10AM">
           <div class="col-md-1 hour">10AM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
         </section>
-        <section class="time-block row" id="11">
+        <section class="time-block row" id="11AM">
           <div class="col-md-1 hour">11AM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="btn saveBtn col-md-1"><i class="far fa-save"></i></button>
         </section>
-        <section class="time-block row" id="12">
+        <section class="time-block row" id="12PM">
           <div class="col-md-1 hour">12PM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
         </section>
-        <section class="time-block row" id="1">
+        <section class="time-block row" id="1PM">
           <div class="col-md-1 hour">1PM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
         </section>
-        <section class="time-block row" id="2">
+        <section class="time-block row" id="2PM">
           <div class="col-md-1 hour">2PM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
         </section>
-        <section class="time-block row" id="3">
+        <section class="time-block row" id="3PM">
           <div class="col-md-1 hour">3PM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
         </section>
-        <section class="time-block row" id="4">
+        <section class="time-block row" id="4PM">
           <div class="col-md-1 hour">4PM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
         </section>
-        <section class="time-block row" id="5">
+        <section class="time-block row" id="5PM">
           <div class="col-md-1 hour">5PM</div>
           <textarea class="col-lg-10 description"></textarea>
           <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
